--- a/frontend/src/components/Header/style.scss
+++ b/frontend/src/components/Header/style.scss
@@ -1,3 +1,5 @@
+@import '../../assets//variables';
+
 .header{
     display: flex;
     align-items: center;
@@ -18,6 +20,18 @@
     &__logout-logo{
         height: 2.2rem;
         cursor: pointer;
+    }
+    &__auth{
+        display: flex;
+        &-btn{
+            border: 2px solid $primary;
+            padding: 0.4rem 1.5rem;
+            margin-left: 1rem;
+            border-radius: 1rem;
+            font-size: 1.3rem;
+            font-weight: 500;
+            cursor: pointer;
+        }
     }
     
 }
