--- a/frontend/src/components/Task/style.scss
+++ b/frontend/src/components/Task/style.scss
@@ -81,5 +81,9 @@
         width: 2rem;
         height: 2rem;
         margin-left: 1rem;
+        &:hover{
+            transform: scale(1.1);
+            transition: transform 0.1s ease,
+        }
     }
 }
